footer section complete

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+/* common style */
+.section-margin{
+    margin-top: 120px;
+    
 .cover-image{
     filter: brightness(50%);
 }
@@ -5,12 +9,17 @@
     background-color: #289bde;
     color: white;
 }
-.section-margin{
-    margin-top: 120px;
+
 }
 .price{
     color: #289bde;
 }
 .reg-button{
+    color: #289bde;
+}
+.savvy-footer{
+    padding: 100px 0;
+}
+.social-media i:hover{
     color: #289bde;
 }
